--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -187,6 +187,20 @@ input {
   }
 }
 
+.checkbox{
+  margin-top: -10px;
+  margin-bottom:  20px;
+  span{
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me{
+  width: auto;
+  margin-left: 0;
+}
+
 
 /* Dropdown menu */
 
